environment/blade/base/gloo-mesh/enterprise-networking/istio/enterprise-networking-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: enterprise-networking
  namespace: istio-system
spec:
  selector:
    service.istio.io/canonical-name: istio-ingressgateway-ew
  servers:
  - port:
      number: 9900
      name: relay
      protocol: tcp
    hosts:
    - relay.jad.solo.io
